components/page-landing.scss
@use '@carbon/styles/scss/grid';
@use '@carbon/styles/scss/breakpoint' as *;
@use '@carbon/styles/scss/spacing' as *;
@use '@carbon/styles/scss/theme' as *;
@use '@carbon/styles/scss/type' as *;

:host(page-landing) {
  @include grid.css-grid();

  .cds--css-grid {
    padding-left: $spacing-06;
    padding-right: $spacing-06;
    box-sizing: border-box;
  }

  .page--landing {
    height: 100%;
    overflow-y: auto;
  }

  .page--landing__banner {
    margin: 0 -1 * $spacing-06;
    padding: $spacing-05 $spacing-06 $spacing-07 * 4;
    background: $layer-01;
  }

  .page--landing__heading {
    @include type-style('productive-heading-05');

    margin: 0;
  }

  .page--landing__illo {
    max-width: 100%;
    float: inline-end;
    height: auto;
  }

  @media (max-width: 672px) {
    .page--landing__illo {
      max-width: 528px;
      width: 100%;
      height: 100%;
      float: inline-start;
    }
  }

  .page--landing__tabs {
    margin: -1 * $spacing-08 0 $spacing-08;
  }

  .page--landing__subheading {
    @include type-style('productive-heading-03');

    font-weight: 600;
  }

  .page--landing__p {
    @include type-style('productive-heading-03');
    margin-top: $spacing-06;
    margin-bottom: $spacing-08;
  }

  .page--landing__r3 {
    height: 100%;
    padding: 3rem 0;
    box-sizing: border-box;
    background: $layer-01;
    box-shadow: $spacing-06 0 0 $layer-01, -1 * $spacing-06 0 0 $layer-01;
  }

  .page--landing__label {
    @include type-style('productive-heading-01');
  }
}

